# OOPlabs

./: Lab1_1.ipynb  README.md
oopLab1/: CMakeLists.txt  func.cpp  func.h  main.cpp  test.cpp
ooplab2/: CMakeLists.txt  four.cpp  four.h  main.cpp  test.cpp
ooplab3/: CMakeLists.txt  figure.h  main.cpp  rectangle.h  square.h  tests.cpp  trapez.cpp  trapez.h  triangle.cpp  triangle.h
ooplab4/: CMakeLists.txt  figure.h  main.cpp  rectangle.h  template_array.h  tests.cpp  trapez.h  triangle.h
ooplab5/: CMakeLists.txt
ooplab5/include/: allocator.hpp  stack_container.hpp
ooplab5/tests/: tests.cpp
ooplab6/: CMakeLists.txt  logs.txt
ooplab6/include/: bandit.hpp  eichhorn.hpp  elf.hpp  fighting.hpp  knight.hpp  npc.hpp  pegasus.hpp
ooplab6/src/: bandit.cpp  eichhorn.cpp  elf.cpp  knight.cpp  main.cpp  npc.cpp  pegasus.cpp
ooplab6/tests/: tests.cpp
ooplab7/include/: eichhorn.hpp  knight.hpp  npc.hpp  pegasus.hpp
ooplab7/src/: eichhorn.cpp  knight.cpp  main.cpp  npc.cpp  pegasus.cpp
ooplab7/tests/: tests.cpp
